--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Projeto Manhattan</h1>
-</body>
-</html>
+  <header class="cabecalho">
+    <img src="little-boy.gif" alt="Bomba"
+class="cabecalho-little-boy">
+    <ul class="cabecalho-lista">
+      <li class="cabecalho-lista-item">Cientistas</li>
+      <li class="cabecalho-lista-item">Laboratório</li>
+    </ul>
+  </header>
+<section id="Cientistas">
+
+</section>
+
+<section id="Laboratório">
+
+</section>
+
+<footer class="rodape">
+    
+</footer>
