--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 no cultivo e abundância desse recurso natural que é a vitaminosa açaí. Podemos encontrar lojas em todos os estados dessa região.
             </p>
         </div>
-        <img src="imagens/acai-refeicao.png" alt="" class="sobre_nos-imagem">
+        <img src="little-boy.gif" alt="" class="sobre_nos-imagem">
     </section>
 
     <section class="lojas">
