--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </ul>
     </header>
 
-    <section class="sobre_nos">
+    <section class="História Núclear">
         <div class="sobre_nos-div-conteudo">
-            <h2 class="sobre_nos-titulo">Sobre nós</h2>
-            <p class="sobre_nos-paragrafo">A loja Açaí
+            <h2 class="História_Núclear-titulo">Sobre nós</h2>
+            <p class="iommioimim">A loja Açaí
                 existe desde os anos 2000, trazendo o que é mais qualitativo sobre esse fruto
                 delicioso, que é um privilégio natural da Região Norte do Brasil.
             </p>
