--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <section class="sobre_nos">
       <div class="sobre_nos-div-conteudo">
           <h2 class="sobre_nos-titulo">Sobre nós</h2>
-          <p class="sobre_nos-paragrafo">A loja Açaí
-              existe desde os anos 2000, trazendo o que é mais qualitativo sobre esse fruto
-              delicioso, que é um privilégio natural da Região Norte do Brasil.
+          <p class="sobre_nos-paragrafo">O projeto Manhatan
+             foi um evento muito importante para história da humanidade 
+             e traz para nós reflexões sobre a sociedade que estamos inseridos.
             </p>
-            <p class="sobre_nos-paragrafo"> A Região Amazônica, que compreende toda região norte do nosso país é rica
-                no cultivo e abundância desse recurso natural que é a vitaminosa açaí. Podemos encontrar lojas em todos os estados dessa região.
+            <p class="sobre_nos-paragrafo">Este projeto durou 3 anos  
+                .
             </p>
         </div>
         <img src="little-boy.gif" alt="" class="sobre_nos-imagem">
