--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <section class="sobre_nos">
       <div class="sobre_nos-div-conteudo">
-          <h2 class="sobre_nos-titulo">Sobre nós</h2>
-          <p class="sobre_nos-paragrafo">O projeto Manhatan
+          <h2 class="sobre_nos-titulo">Projeto Manhattan</h2>
+          <p class="sobre_nos-paragrafo">O projeto Manhattan
              foi um evento muito importante para história da humanidade 
              e traz para nós reflexões sobre a sociedade que estamos inseridos.
             </p>
