--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <span></span>
             <div class="loja-estado">
                 <img src="bandeiras/tocantins.jpg" alt="bandeira de Tocantins" class="lojas-estados-img">
-                <h3 class="lojas-estado-nome">Tocantins</h3>
+                <h3 class="lojas-estado-nome">Frank Oppenheimer</h3>
                 <a href="https://www.to.gov.br/&quot;  target="_blank" class="loja-estados-links">
                     <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
                 </a>
