--- a/index.html
+++ b/index.html
@@ -36,44 +36,44 @@
     <section class="lojas">
         <h2 class="lojas-titulo">Uns Dos Cientistas Envolvido </h2>
 
-        <div class="lojas-todosestados-div">
+        <div class="Cientistas-envolvidos-div">
             <div class="loja-estado">
-                <img src="bandeiras/acre.jpg" alt="bandeira do acre" class="lojas-estados-img">
+                <img src="bandeiras/acre.jpg" alt="Foto do Richard Feynman" class="lojas-estados-img">
                 <h3 class="lojas-estado-nome">Richard Feynman</h3>
                 <a href="https://www.ac.gov.br/&quot; target="_blank" class="loja-estados-links">
                     <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
                 </a>
             </div>
             <div class="loja-estado">
-                <img src="bandeiras/amapa.jpg" alt="bandeira do Amapá" class="lojas-estados-img">
+                <img src="bandeiras/amapa.jpg" alt="Foto do Albert Einstein" class="lojas-estados-img">
                 <h3 class="lojas-estado-nome">Albert Einstein</h3>
                 <a href="https://www.portal.ap.gov.br/&quot;  target="_blank"  class="loja-estados-links">
                     <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
                 </a>
             </div>
             <div class="loja-estado">
-                <img src="bandeiras/amazonas.jpg" alt="bandeira do Amazonas" class="lojas-estados-img">
+                <img src="bandeiras/amazonas.jpg" alt="Foto do J.Robert Oppenheimer" class="lojas-estados-img">
                 <h3 class="lojas-estado-nome">J.Robert Oppenheimer</h3>
                 <a href="https://www.amazonas.am.gov.br/&quot;  target="_blank" class="loja-estados-links">
                     <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
                 </a>
             </div>
             <div class="loja-estado">
-                <img src="bandeiras/para.jpg" alt="bandeira do Pará" class="lojas-estados-img">
+                <img src="bandeiras/para.jpg" alt="Foto do Hans Bethe" class="lojas-estados-img">
                 <h3 class="lojas-estado-nome">Hans Bethe</h3>
                 <a href="https://www.pa.gov.br/&quot;  target="_blank"  class="loja-estados-links">
                     <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
                 </a>
             </div>
             <div class="loja-estado">
-                <img src="bandeiras/rondonia.jpg" alt="bandeira de Rondônia" class="lojas-estados-img">
+                <img src="bandeiras/rondonia.jpg" alt="Foto do Enrico Fermi" class="lojas-estados-img">
                 <h3 class="lojas-estado-nome">Enrico Fermi</h3>
                 <a href="https://www.ro.gov.br/&quot;  target="_blank"  class="loja-estados-links">
                     <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
                 </a>
             </div>
             <div class="loja-estado">
-                <img src="bandeiras/roraima.jpg" alt="bandeira de Roraima" class="lojas-estados-img">
+                <img src="bandeiras/roraima.jpg" alt="Foto do James Chadwick" class="lojas-estados-img">
                 <h3 class="lojas-estado-nome">James Chadwick</h3>
                 <a href="https://portal.rr.gov.br/&quot;  target="_blank" class="loja-estados-links">
                     <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
@@ -81,7 +81,7 @@
             </div>
             <span></span>
             <div class="loja-estado">
-                <img src="bandeiras/tocantins.jpg" alt="bandeira de Tocantins" class="lojas-estados-img">
+                <img src="bandeiras/tocantins.jpg" alt="Foto do Frank Oppenheimer" class="lojas-estados-img">
                 <h3 class="lojas-estado-nome">Frank Oppenheimer</h3>
                 <a href="https://www.to.gov.br/&quot;  target="_blank" class="loja-estados-links">
                     <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
