--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
     <section class="lojas">
         <h2 class="lojas-titulo">Uns Dos Cientistas Envolvido </h2>
 
-        <div class="Cientistas-envolvidos-div">
+        <div class="-div">
             <div class="loja-estado">
-                <img src="bandeiras/acre.jpg" alt="Foto do Richard Feynman" class="lojas-estados-img">
+                <img src="portrait-of-richard-feynman-bettmann.jpg" alt="Foto do Richard Feynman" class="lojas-estados-img">
                 <h3 class="lojas-estado-nome">Richard Feynman</h3>
                 <a href="https://www.ac.gov.br/&quot; target="_blank" class="loja-estados-links">
                     <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
                 </a>
             </div>
             <div class="loja-estado">
-                <img src="bandeiras/amapa.jpg" alt="Foto do Albert Einstein" class="lojas-estados-img">
+                <img src="2-albert-einstein.webp" alt="Foto do Albert Einstein" class="lojas-estados-img">
                 <h3 class="lojas-estado-nome">Albert Einstein</h3>
                 <a href="https://www.portal.ap.gov.br/&quot;  target="_blank"  class="loja-estados-links">
                     <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
