--- a/index.html
+++ b/index.html
@@ -33,58 +33,58 @@
         <img src="little-boy.gif" alt="" class="sobre_nos-imagem">
     </section>
 
-    <section class="lojas">
+    <section class="Físicos">
         <h2 class="lojas-titulo">Uns Dos Cientistas Envolvido </h2>
 
-        <div class="-div">
-            <div class="loja-estado">
-                <img src="portrait-of-richard-feynman-bettmann.jpg" alt="Foto do Richard Feynman" class="lojas-estados-img">
+        <div class="Cientistas-div">
+            <div class="Cientistas">
+                <img src="portrait-of-richard-feynman-bettmann.jpg" alt="Foto do Richard Feynman" class="Cientistas-img">
                 <h3 class="lojas-estado-nome">Richard Feynman</h3>
-                <a href="https://www.ac.gov.br/&quot; target="_blank" class="loja-estados-links">
-                    <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
+                <a href="https://www.ac.gov.br/&quot; target="_blank" class="Cientistas-links">
+                    <img src="imagens/icone-www.png&quot; alt="icone site" class="Cientistas-icone">
                 </a>
             </div>
-            <div class="loja-estado">
-                <img src="2-albert-einstein.webp" alt="Foto do Albert Einstein" class="lojas-estados-img">
+            <div class="Cientistas">
+                <img src="2-albert-einstein.webp" alt="Foto do Albert Einstein" class="Cientistas-img">
                 <h3 class="lojas-estado-nome">Albert Einstein</h3>
-                <a href="https://www.portal.ap.gov.br/&quot;  target="_blank"  class="loja-estados-links">
-                    <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
+                <a href="https://www.portal.ap.gov.br/&quot;  target="_blank"  class="Cientistas-links">
+                    <img src="imagens/icone-www.png&quot; alt="icone site" class="Cientistas-icone">
                 </a>
             </div>
-            <div class="loja-estado">
-                <img src="bandeiras/amazonas.jpg" alt="Foto do J.Robert Oppenheimer" class="lojas-estados-img">
+            <div class="Cientistas">
+                <img src="gettyimages-615317282.jpg" alt="Foto do J.Robert Oppenheimer" class="Cientistas-img">
                 <h3 class="lojas-estado-nome">J.Robert Oppenheimer</h3>
-                <a href="https://www.amazonas.am.gov.br/&quot;  target="_blank" class="loja-estados-links">
-                    <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
+                <a href="https://www.amazonas.am.gov.br/&quot;  target="_blank" class="Cientistas-links">
+                    <img src="imagens/icone-www.png&quot; alt="icone site" class="Cientistas-icone">
                 </a>
             </div>
-            <div class="loja-estado">
-                <img src="bandeiras/para.jpg" alt="Foto do Hans Bethe" class="lojas-estados-img">
+            <div class="Cientistas">
+                <img src="bandeiras/para.jpg" alt="Foto do Hans Bethe" class="Cientistas-img">
                 <h3 class="lojas-estado-nome">Hans Bethe</h3>
-                <a href="https://www.pa.gov.br/&quot;  target="_blank"  class="loja-estados-links">
-                    <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
+                <a href="https://www.pa.gov.br/&quot;  target="_blank"  class="Cientistas-links">
+                    <img src="imagens/icone-www.png&quot; alt="icone site" class="Cientistas-icone">
                 </a>
             </div>
-            <div class="loja-estado">
-                <img src="bandeiras/rondonia.jpg" alt="Foto do Enrico Fermi" class="lojas-estados-img">
+            <div class="Cientistas">
+                <img src="bandeiras/rondonia.jpg" alt="Foto do Enrico Fermi" class="Cientistas-img">
                 <h3 class="lojas-estado-nome">Enrico Fermi</h3>
-                <a href="https://www.ro.gov.br/&quot;  target="_blank"  class="loja-estados-links">
-                    <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
+                <a href="https://www.ro.gov.br/&quot;  target="_blank"  class="Cientistas-links">
+                    <img src="imagens/icone-www.png&quot; alt="icone site" class="Cientistas-icone">
                 </a>
             </div>
-            <div class="loja-estado">
-                <img src="bandeiras/roraima.jpg" alt="Foto do James Chadwick" class="lojas-estados-img">
+            <div class="Cientistas">
+                <img src="bandeiras/roraima.jpg" alt="Foto do James Chadwick" class="Cientistas-img">
                 <h3 class="lojas-estado-nome">James Chadwick</h3>
                 <a href="https://portal.rr.gov.br/&quot;  target="_blank" class="loja-estados-links">
                     <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
                 </a>
             </div>
             <span></span>
-            <div class="loja-estado">
-                <img src="bandeiras/tocantins.jpg" alt="Foto do Frank Oppenheimer" class="lojas-estados-img">
+            <div class="Cientistas">
+                <img src="bandeiras/tocantins.jpg" alt="Foto do Frank Oppenheimer" class="Cientistas-img">
                 <h3 class="lojas-estado-nome">Frank Oppenheimer</h3>
-                <a href="https://www.to.gov.br/&quot;  target="_blank" class="loja-estados-links">
-                    <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
+                <a href="https://www.to.gov.br/&quot;  target="_blank" class="Cientistas-links">
+                    <img src="imagens/icone-www.png&quot; alt="icone site" class="Cientistas-icone">
                 </a>
             </div>
         </div>
