--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
                 </a>
             </div>
             <div class="Cientistas">
-                <img src="bandeiras/rondonia.jpg" alt="Foto do Enrico Fermi" class="Cientistas-img">
+                <img src="230925_fermi.jpg" alt="Foto do Enrico Fermi" class="Cientistas-img">
                 <h3 class="lojas-estado-nome">Enrico Fermi</h3>
                 <a href="https://www.ro.gov.br/&quot;  target="_blank"  class="Cientistas-links">
                     <img src="imagens/icone-www.png&quot; alt="icone site" class="Cientistas-icone">
                 </a>
             </div>
             <div class="Cientistas">
-                <img src="bandeiras/roraima.jpg" alt="Foto do James Chadwick" class="Cientistas-img">
+                <img src="h4030119-400px-wm.jpg" alt="Foto do James Chadwick" class="Cientistas-img">
                 <h3 class="lojas-estado-nome">James Chadwick</h3>
                 <a href="https://portal.rr.gov.br/&quot;  target="_blank" class="loja-estados-links">
                     <img src="imagens/icone-www.png&quot; alt="icone site" class="lojas-estado-icone">
@@ -81,7 +81,7 @@
             </div>
             <span></span>
             <div class="Cientistas">
-                <img src="bandeiras/tocantins.jpg" alt="Foto do Frank Oppenheimer" class="Cientistas-img">
+                <img src="frank-oppenheimer-zz-230717-aad95a.webp" alt="Foto do Frank Oppenheimer" class="Cientistas-img">
                 <h3 class="lojas-estado-nome">Frank Oppenheimer</h3>
                 <a href="https://www.to.gov.br/&quot;  target="_blank" class="Cientistas-links">
                     <img src="imagens/icone-www.png&quot; alt="icone site" class="Cientistas-icone">
